一度選択されたものが再度選択されないよう修正

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 {
                     var index = Math.floor(Math.random() * data.length);
                     var title = data[index]["title"];
+                    data.splice(index, 1)
 
                     var td = document.createElement("td");
                     td.innerHTML = title;
