データベース更新

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </script>
 
         <!-- ここから曲データベース -->
-        <script type="text/javascript" src="anison.txt"></script>
+        <script type="text/javascript" src="json.txt"></script>
         <!-- ここまで曲データベース -->
 
         <script type="text/javascript">
