レイアウト調整

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <option value="15">15</option>
                 <option value="20">20</option>
             </select>
-            <span style="margin:100px;">
+            <div>
                 <input type="checkbox" id="isSquence" name="isSquence" value="1" checked=true><label for="isSquence">連番で出力</label>
-            </span>
+            </div>
         </div>
 
         <div id="main">
