レイアウト調整

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </select>
         </div>
         <div>
-            <input type="checkbox" id="isSquence" name="isSquence" value="1" checked=true><label for="isSquence">連番で出力</label>
+            <input type="checkbox" id="isSquence" name="isSquence" value="1" checked=true>
+            <label for="isSquence">連番で出力</label>
         </div>
 
         <div id="main">
