レイアウト調整

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div>
             <input type="checkbox" id="isSquence" name="isSquence" value="1" checked=true>
-            <label for="isSquence">連番で出力</label>
+            <label for="isSquence">連番出力</label>
         </div>
 
         <div id="main">
