--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=320">
+
     <head>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="jquery-2.1.3.min.js"></script>
+
     </head>
     <body>
         <div>
@@ -31,8 +35,8 @@
         <div id="main">
         </div>
         <br>
-        <div style="width:400px; height:200px; margin:0 auto 0 auto;">
-            <button style="width:400px; height:100px; margin:auto;" onclick="select();">抽選</button>
+        <div class="buttonDiv">
+            <button onclick="select();">抽選</button>
         </div>
 
         <script type="text/javascript">
