--- a/index.html
+++ b/index.html
@@ -12,20 +12,12 @@
     <body>
         <div>
             抽選曲数
-            <select id="selectCount">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4" selected>4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-            </select>
+            <input type="number"
+                id="selectCount"
+                value="4"
+                min = "1"
+                max = "99"
+            >
         </div>
         <div>
             <input type="checkbox" id="isSquence" name="isSquence" value="1" checked=true>
