連番出力設定のデフォをtrueからfalseにする

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             >
         </div>
         <div>
-            <input type="checkbox" id="isSquence" name="isSquence" value="1" checked=true>
+            <input type="checkbox" id="isSquence" name="isSquence" value="1">
             <label for="isSquence">連番出力</label>
         </div>
 
