--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="buttonDiv">
-            <button class="selectButton" onclick="select();">抽選</button>
+            <button class="selectButton" onclick="onClickSelect();">抽選</button>
         </div>
 
         <script type="text/javascript">
@@ -44,18 +44,27 @@
             data = [];
             var main = document.getElementById("main");
 
-            function select()
+            function onClickSelect()
             {
+                var totalSelectCount = Number($("#selectCount").val());
+
+                if (totalSelectCount > Number($("#selectCount").prop('max')))
+                {
+                    alert("抽選数が多すぎます");
+                    return;
+                }
+
                 var selectCount;
                 var batchSize;
+
                 if ($("#isSquence").prop('checked'))
                 {
-                    selectCount = 1;;
-                    batchSize = Number($("#selectCount").val());
+                    selectCount = 1;
+                    batchSize = totalSelectCount;
                 }
                 else
                 {
-                    selectCount = Number($("#selectCount").val());
+                    selectCount = totalSelectCount;
                     batchSize = 1;
                 }
 
